# youfeed

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_users_auth.py  0002_sources_categories.py  0003_articles_kg.py  0004_activity_log.py  0005_entity_source_counts.py  0006_widen_ner_type.py  0007_topics_type_extended.py  0008_article_topics_composite_source.py  0009_topic_rules_tables.py  0010_topic_rules_reconcile.py  0011_topics_type_invalid.py  0012_password_reset_tokens.py  0013_notifications.py  0014_alerts.py  0015_push_subscriptions.py  0016_alerts_multi_topic.py  0017_article_bookmarks.py  0018_topics_type_extra.py  0019_traffic_blocks.py  0020_traffic_blocks_ip_ua.py  0021_user_profile_seo.py
backend/app/: __init__.py  admin_deps.py  auth_deps.py  config.py  db.py  deps.py  exceptions.py  logging_setup.py  main.py  queues.py  redis_client.py
backend/app/ingestion/: __init__.py  classify.py  discovery.py  feed_parser.py  image_processor.py  manticore_client.py  ner.py  normalize.py  robots.py  user_agent.py  wp_api.py
backend/app/middleware/: activity_log.py  csrf.py  geoip.py  ratelimit.py  traffic_block.py
backend/app/models/: __init__.py  activity.py  alerts.py  articles.py  base.py  bookmarks.py  knowledge.py  notifications.py  push.py  security.py  sources.py  users.py
backend/app/routers/: admin.py  articles.py  auth.py  categories.py  discovery.py  dispatcher.py  health.py  me.py  oauth.py  public.py  push.py  search.py  seo.py  sources.py  topics.py  track.py
backend/app/schemas/: alerts.py  articles.py  auth.py  bookmarks.py  categories.py  discovery.py  notifications.py  push.py  search.py  sources.py
backend/app/security/: __init__.py  auto_ban.py  block_cache.py  countries.py  events_store.py  scanner_paths.py
backend/app/services/: __init__.py  account_service.py  alert_service.py  articles_service.py  auth_service.py  bookmark_service.py  category_service.py  discovery_service.py  email_service.py  ingestion_service.py  notification_service.py  oauth_service.py  push_service.py  retention_service.py  search_service.py  seo_service.py  source_service.py  wikidata_service.py
backend/app/static/css/: admin.css  public.css
backend/app/static/js/: public.js
backend/app/templates/admin/: article.html  base.html  composite.html  dashboard.html  entities.html  featured.html  rules.html  security_blocks.html  security_events.html  security_stats.html  sources.html  stats.html  topic_edit.html  topics.html  users.html
backend/app/templates/emails/: _base.html  reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
backend/app/templates/public/: 404.html  base.html  bot.html  home.html  (+5 more)
backend/app/topic_extractor/: __init__.py  cli.py  extractor.py  service.py
backend/app/utils/: enrich_topics.py  ingest_cli.py  manage_partitions.py  notify_digest.py  passwords.py  reclassify_topics.py  refresh_source_titles.py  refresh_topics.py  reindex.py  retention_sweep.py  seed_loader.py  slugify.py  tokens.py  topics_snapshot.py  vapid_keys.py
backend/app/workers/: __init__.py  activity_log.py  alerts.py  email.py  enrich.py  fetch.py  image.py  process.py  push.py  scheduler.py
backend/manticore/: articles_rt.sql
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_account_service.py  test_articles_service.py  test_auth_service.py  test_classify_step_c.py  test_ingestion_service.py  test_me_router.py  test_seed_municipalities.py  test_seo_service.py  test_topic_extractor_service.py  test_topics_snapshot.py
backend/tests/unit/: test_activity_log_mapping.py  test_app_starts.py  test_articles_cursor.py  test_category_tree.py  test_classify.py  test_discovery_parsers.py  test_email_templates.py  test_feed_parser.py  test_image_processor.py  test_manticore_client.py  test_normalize.py  test_passwords.py  test_seed_provinces.py  test_seo_service.py  test_slugify.py  test_topic_extractor.py  test_wp_api.py
(+144 files in other folders)
